--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,10 @@
 name: auto build and release
 
-on: workflow_dispatch 
+on:
+  workflow_dispatch:
+  push:
+      tags:
+        - v*     # Push events for all vx tags
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
