--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -71,7 +71,7 @@ jobs:
 
     - uses: actions/upload-artifact@v4
       with:
-          name: my-build-output  # 工件名称
+          name: 'SoFixer-${{ runner.os }}-64${{ steps.release_name_format.outputs.format }}' 
           path: '${{ github.workspace }}/build64/SoFixer64${{ steps.release_name_format.outputs.format }}'
           
 
